added aside style

--- a/app/shared/header/header.styl
+++ b/app/shared/header/header.styl
@@ -4,7 +4,7 @@ header
   position fixed
   width 100%
   figure.logo
-    background-color #1e2025
+    background-color $bg-figure
     display inline-block
     height 50px
     margin 0
@@ -15,10 +15,12 @@ header
       margin-top 6px
       width 100%
   .menu
-    color #fff
     float right
     padding-top 20px
     padding-right 40px
-    span
-      margin-right 10px
+    a
+      color $color-links
+      text-decoration none
+      span
+        margin-right 10px
 
