--- a/app/components/dashboard/dashboardView.html
+++ b/app/components/dashboard/dashboardView.html
@@ -1,1 +1,30 @@
+<section class="speed-zones">
+  <div class="chart-info">
+    <h4>Speed Zones</h4>
+    <span>
+      <a class="not-active"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+      <a class="not-active"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+    </span>
+  </div>
+  <div class="chart-zones">
+    <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+  </div>
+</section>
 
+<section class="count-zones">
+  <div class="chart-info">
+    <h4>Count by Zones</h4>
+  </div>
+  <div class="chart-zones">
+    <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+  </div>
+</section>
+
+<section class="average-zones">
+  <div class="chart-info">
+    <h4>Count by Zones</h4>
+  </div>
+  <div class="chart-zones">
+    <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+  </div>
+</section>
