--- a/app/shared/header/header.styl
+++ b/app/shared/header/header.styl
@@ -3,6 +3,7 @@ header
   background-color $bg-color
   position fixed
   width 100%
+  z-index: 1;
   figure.logo
     background-color $bg-figure
     display inline-block
