--- a/app/shared/sidebar/sidebar.styl
+++ b/app/shared/sidebar/sidebar.styl
@@ -30,6 +30,9 @@ nav
           i
             color $icons-aside
             margin-right 8px
+        .not-active
+          cursor default
+          pointer-events none
         &:hover
           background-color #1e2025
       .close-menu
