--- a/app/components/dashboard/dashboardView.html
+++ b/app/components/dashboard/dashboardView.html
@@ -7,7 +7,7 @@
     </span>
   </div>
   <div class="chart-zones">
-    <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+    <canvas id="line" class="chart chart-line" chart-data="dataSpeed" chart-labels="labels" chart-series="seriesSpeed" chart-options="options"></canvas>
   </div>
 </section>
 
@@ -16,15 +16,15 @@
     <h4>Count by Zones</h4>
   </div>
   <div class="chart-zones">
-    <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+    <canvas id="bar" class="chart chart-bar" chart-data="dataCount" chart-labels="labels" chart-series="labels" chart-options="options"></canvas>
   </div>
 </section>
 
 <section class="average-zones">
   <div class="chart-info">
-    <h4>Count by Zones</h4>
+    <h4>Speed Average</h4>
   </div>
   <div class="chart-zones">
-    <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-series="series"</canvas>
+    <canvas id="doughnut" class="chart chart-doughnut" chart-data="dataAverage" chart-labels="labels" chart-series="labels" chart-options="options"></canvas>
   </div>
 </section>
