added news section

--- a/app/app.styl
+++ b/app/app.styl
@@ -10,3 +10,5 @@
 @import './shared/sidebar/sidebar.styl'
 // dashboard
 @import './components/dashboard/dashboard.styl'
+// news
+@import './components/news/news.styl'
