fixed bar chart

--- a/app/components/dashboard/dashboardView.html
+++ b/app/components/dashboard/dashboardView.html
@@ -16,7 +16,7 @@
     <h4>Count by Zones</h4>
   </div>
   <div class="chart-zones">
-    <canvas id="bar" class="chart chart-bar" chart-data="dataCount" chart-labels="labels" chart-series="labels" chart-options="options"></canvas>
+    <canvas id="bar" class="chart chart-bar" chart-data="dataCount" chart-labels="labels" chart-series="labels"></canvas>
   </div>
 </section>
 
