--- a/app/shared/sidebar/sidebar.styl
+++ b/app/shared/sidebar/sidebar.styl
@@ -30,6 +30,10 @@ nav
           i
             color $icons-aside
             margin-right 8px
+        .active
+          background-color #1e2025
+          padding 10px
+          width 100%
         .not-active
           cursor default
           pointer-events none
