--- a/views/header/headerView.html
+++ b/views/header/headerView.html
@@ -1,6 +1,6 @@
 <header>
   <figure class="logo">
-    <img src="./../assets/img/logo.png" alt="rokk3rlabs">
+    <img src="assets/img/logo.png" alt="rokk3rlabs">
   </figure>
   <div class="menu">
     <a href="#">
